@@ -1,3 +1,4 @@
+* Add cache clean timeout configuration
 * Implicit conversion to boolean in PYSON statement
 * Add domain to dictionary schema
 * Fill main language in ir.configuration at database initialization
